# WTCApp

./: .gitignore  .gitmodules  addGtkResource.cmake  global.cmake
WTCClient/: CMakeLists.txt  build.sh  main.cpp  ncurse_test.cpp.bak  run.sh
WTCClient/resources/: build.sh  wtc.gresource.xml
WTCClient/resources/css/: style.css
WTCClient/resources/ui/: main_window.ui
WTCClient/wtc/: wtcApp.h  wtcCommon.h  wtcMenuBtn.h  wtcSubMenu.h  wtcWindow.h
WTCServer/: CMakeLists.txt  build.sh  clean.sh  main.cpp
common/: Messages.h  UDPClient.h  UDPServer.h
common/gtkaa/: IApp.h  IBuilder.h  ICommon.h  ICssProvider.h  IEvent.h  ILabel.h  IPaned.h  IWidget.h  IWindow.h  categorys.md  gtkaa.h
common/gtkaa/app/: IApp.h  gtkaaIApp.h  gtkaaapp.h
common/gtkaa/base/: IBase.h  ICommon.h  IEvent.h  IWidget.h  gtkaaICommon.h  gtkaaIEvent.h  gtkaaIWidget.h  gtkaabase.h
common/gtkaa/container/: IBox.h  IExpander.h  IFixed.h  IGrid.h  IOverlay.h  IPaned.h  IRevealer.h  IStack.h  gtkaaIBox.h  gtkaaIExpander.h  gtkaaIFixed.h  gtkaaIFlowBox.h  gtkaaIFrame.h  gtkaaIGrid.h  gtkaaIHeaderBar.h  gtkaaIListBox.h  gtkaaINoteBook.h  gtkaaIOverlay.h  gtkaaIPaned.h  gtkaaIRevealer.h  gtkaaIScrolledWindow.h  gtkaaIStack.h  gtkaacontainer.h
common/gtkaa/resource/: IBuilder.h  ICssProvider.h  gtkaaIBuilder.h  gtkaaICssProvider.h  gtkaaresource.h
common/gtkaa/utility/: gtkaaEventController.h  gtkaautility.h
common/gtkaa/widget/: ILabel.h
common/gtkaa/widgets/: gtkaawidget.h
common/gtkaa/widgets/basic_display/: gtkaaIImage.h  gtkaaILabel.h  gtkaaILevelBar.h  gtkaaIPicture.h  gtkaaIProgressBar.h  gtkaaISeparator.h  gtkaaISpinner.h  gtkaabasic_display.h
common/gtkaa/widgets/data_display/: gtkaaIColumnView.h  gtkaaIListView.h  gtkaaITextView.h  gtkaadata_display.h
common/gtkaa/widgets/data_display /: gtkaaITextView.h  gtkaadata_display.h
common/gtkaa/widgets/interaction/: gtkaaIButton.h  gtkaaICheckButton.h  gtkaaIEntry.h  gtkaaILinkButton.h  gtkaaIPasswordEntry.h  gtkaaIScale.h  gtkaaISearchEntry.h  gtkaaISpinButton.h  gtkaaISwitch.h  gtkaaIToggleButton.h  gtkaainteraction.h
common/gtkaa/widgets/selector/: gtkaaIDropDown.h  gtkaaIMenuButton.h  gtkaaIPopoverMenu.h  gtkaaselector.h
common/gtkaa/widgets/window/: IWindow.h  gtkaaIAboutDialog.h  gtkaaIMenuButton.h  gtkaaIPopover.h  gtkaaIWindow.h  gtkaawindow.h
